Updated the code as per webclient
Signed-off-by: Dhanendra Sahu <dhanendra.tech@gmail.com>