@@ -5,6 +5,7 @@ import java.util.*;
 import io.mosip.registration.processor.core.packet.dto.packetmanager.TagRequestDto;
 import io.mosip.registration.processor.core.packet.dto.packetmanager.TagResponseDto;
 import jakarta.annotation.PostConstruct;
+
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.ParameterizedTypeReference;
@@ -42,10 +43,10 @@ public class PacketManagerService {
 
     private static final Logger log = RegProcessorLogger.getLogger(PacketManagerService.class);
 
-    private static final String ID = "mosip.commmons.packetmanager";
+    private static final String ID = "mosip.commons.packetmanager";
     private static final String VERSION = "v1";
     private static final String ERR_NOT_EXISTS = "KER-PUT-027";
-    private static final List<String> NON_RECOVERABLE = Arrays.asList("KER-PUT-019");
+    private static final List<String> NON_RECOVERABLE = List.of("KER-PUT-019");
 
     @Autowired
     @Qualifier("selfTokenWebClient")
@@ -63,43 +64,35 @@ public class PacketManagerService {
     }
 
     /* ============================================================
-       FAST-PATH HELPERS
+       SAFE ERROR HANDLING
        ============================================================ */
 
-    private void failFast(String method, String id, ErrorDTO err) throws PacketManagerException {
+    private void throwMappedError(String method, String id, ErrorDTO err) throws PacketManagerException {
         log.error(LoggerFileConstant.SESSIONID.toString(),
                 LoggerFileConstant.REGISTRATIONID.toString(),
                 id,
-                "PacketManagerService." + method + " FAILED :: code=" + err.getErrorCode() + ", msg=" + err.getMessage()
+                "PacketManagerService." + method +
+                        " FAILED :: code=" + err.getErrorCode() + ", msg=" + err.getMessage()
         );
 
         String code = err.getErrorCode();
-        String msg = err.getMessage();
 
         if (ERR_NOT_EXISTS.equals(code))
-            throw new ObjectDoesnotExistsException(code, msg);
+            throw new ObjectDoesnotExistsException(code, err.getMessage());
 
         if (NON_RECOVERABLE.contains(code))
-            throw new PacketManagerNonRecoverableException(code, msg);
+            throw new PacketManagerNonRecoverableException(code, err.getMessage());
 
-        throw new PacketManagerException(code, msg);
+        throw new PacketManagerException(code, err.getMessage());
     }
 
-    private void checkErrors(String method, String id, List<ErrorDTO> errors)  {
+    private void validateErrors(String method, String id, List<ErrorDTO> errors) throws PacketManagerException {
         if (errors != null && !errors.isEmpty()) {
-            try {
-                failFast(method, id, errors.get(0));
-            } catch (PacketManagerException e) {
-                throw new RuntimeException(e);
-            }
+            throwMappedError(method, id, errors.get(0));
         }
     }
 
-    private <T> T convert(Object src, Class<T> type) {
-        return src == null ? null : mapper.convertValue(src, type);
-    }
-
-    private <T> RequestWrapper<T> req(T body) {
+    private <T> RequestWrapper<T> wrapRequest(T body) {
         RequestWrapper<T> r = new RequestWrapper<>();
         r.setId(ID);
         r.setVersion(VERSION);
@@ -109,136 +102,130 @@ public class PacketManagerService {
     }
 
     /* ============================================================
-       UNIFIED POST HANDLER  (WebClient)
+       UNIVERSAL POST HANDLER (FINAL VERSION)
        ============================================================ */
-    private <T> ResponseWrapper<T> post(ApiName apiName, Object body, Class<T> responseType)
-             {
+    private <T> T call(ApiName apiName,
+                       Object request,
+                       ParameterizedTypeReference<ResponseWrapper<T>> type,
+                       String method,
+                       String rid) throws PacketManagerException, ApisResourceAccessException {
 
+        String url = env.getProperty(apiName.name());
+        if (url == null)
+            throw new ApisResourceAccessException("Missing URL for " + apiName);
+
+        ResponseWrapper<T> resp;
         try {
-            String apiHostIpPort = env.getProperty(apiName.name());
-            if (apiHostIpPort == null)
-                throw new ApisResourceAccessException("Missing URL for " + apiName.name());
-
-            String url = apiHostIpPort;
-
-            ParameterizedTypeReference<ResponseWrapper<T>> ptr =
-                    new ParameterizedTypeReference<ResponseWrapper<T>>() {};
-
-            return webClient.post()
+            resp = webClient.post()
                     .uri(url)
                     .contentType(MediaType.APPLICATION_JSON)
-                    .bodyValue(body)
+                    .bodyValue(request)
                     .retrieve()
-                    .bodyToMono(ptr)
+                    .bodyToMono(type)
                     .block();
-
         } catch (Exception e) {
-            log.error(LoggerFileConstant.SESSIONID.toString(),
-                    LoggerFileConstant.APPLICATIONID.toString(),
-                    apiName.name(),
-                    "POST failed :: " + e.getMessage()
-            );
+            throw new PacketManagerException("NETWORK_ERROR", e.getMessage());
         }
-                 return null;
-             }
 
+        if (resp == null)
+            throw new PacketManagerException("EMPTY_RESPONSE", "PacketManager returned null");
+
+        validateErrors(method, rid, resp.getErrors());
+
+        return resp.getResponse();
+    }
 
     /* ============================================================
        FIELDS
        ============================================================ */
 
-    public String getField(String id, String field, String source, String process)
-            throws Exception {
+    public String getField(String id, String field, String source, String process) throws PacketManagerException, ApisResourceAccessException {
 
         FieldDto dto = new FieldDto(id, field, source, process, false);
 
-        ResponseWrapper<FieldResponseDto> resp =
-                post(ApiName.PACKETMANAGER_SEARCH_FIELD, req(dto), FieldResponseDto.class);
+        FieldResponseDto result = call(
+                ApiName.PACKETMANAGER_SEARCH_FIELD,
+                wrapRequest(dto),
+                new ParameterizedTypeReference<ResponseWrapper<FieldResponseDto>>() {},
+                "getField", id
+        );
 
-        checkErrors("getField", id, resp.getErrors());
+        if (result == null || result.getFields() == null) return null;
 
-        FieldResponseDto f = resp.getResponse();
-        if (f == null || f.getFields() == null) return null;
-
-        String v = f.getFields().get(field);
-        return (v != null && v.equalsIgnoreCase("null")) ? null : v;
+        String val = result.getFields().get(field);
+        return (val != null && val.equals("null")) ? null : val;
     }
 
-
-    public Map<String, String> getFields(String id, List<String> fields, String source, String process)
-    {
+    public Map<String, String> getFields(String id, List<String> fields, String source, String process) throws PacketManagerException, ApisResourceAccessException {
 
         FieldDtos dto = new FieldDtos(id, fields, source, process, false);
 
-        ResponseWrapper<FieldResponseDto> resp =
-                post(ApiName.PACKETMANAGER_SEARCH_FIELDS, req(dto), FieldResponseDto.class);
+        FieldResponseDto result = call(
+                ApiName.PACKETMANAGER_SEARCH_FIELDS,
+                wrapRequest(dto),
+                new ParameterizedTypeReference<ResponseWrapper<FieldResponseDto>>() {},
+                "getFields", id
+        );
 
-        checkErrors("getFields", id, resp.getErrors());
-
-        return resp.getResponse().getFields();
+        return (result == null || result.getFields() == null)
+                ? Collections.emptyMap()
+                : result.getFields();
     }
 
     /* ============================================================
        DOCUMENT
        ============================================================ */
 
-    public Document getDocument(String id, String doc, String src, String process)
-             {
+    public Document getDocument(String id, String doc, String src, String process) throws PacketManagerException, ApisResourceAccessException {
 
         DocumentDto dto = new DocumentDto(id, doc, src, process);
 
-        ResponseWrapper<Document> resp =
-                post(ApiName.PACKETMANAGER_SEARCH_DOCUMENT, req(dto), Document.class);
+        Document result = call(
+                ApiName.PACKETMANAGER_SEARCH_DOCUMENT,
+                wrapRequest(dto),
+                new ParameterizedTypeReference<ResponseWrapper<Document>>() {},
+                "getDocument", id
+        );
 
-        checkErrors("getDocument", id, resp.getErrors());
-
-        return resp.getResponse();
+        return result;
     }
 
-    public Document getDocument(String id, String documentName, String process)
-    {
+    public Document getDocument(String id, String documentName, String process) throws PacketManagerException, ApisResourceAccessException {
         return getDocument(id, documentName, null, process);
     }
 
-
     /* ============================================================
-       VALIDATE
+       VALIDATE PACKET
        ============================================================ */
 
-    public ValidatePacketResponse validate(String id, String source, String process)
-    {
+    public ValidatePacketResponse validate(String id, String source, String process) throws PacketManagerException, ApisResourceAccessException {
 
         InfoDto dto = new InfoDto(id, source, process, false);
 
-        ResponseWrapper<ValidatePacketResponse> resp =
-                null;
-        resp = post(ApiName.PACKETMANAGER_VALIDATE, req(dto), ValidatePacketResponse.class);
-
-        checkErrors("validate", id, resp.getErrors());
-
-        return resp.getResponse();
+        return call(
+                ApiName.PACKETMANAGER_VALIDATE,
+                wrapRequest(dto),
+                new ParameterizedTypeReference<ResponseWrapper<ValidatePacketResponse>>() {},
+                "validate", id
+        );
     }
 
     /* ============================================================
-       AUDITS
+       AUDITS (FULL CONTROLLED TYPE)
        ============================================================ */
 
-    public List<FieldResponseDto> getAudits(String id, String src, String process) {
+    public List<FieldResponseDto> getAudits(String id, String src, String process) throws PacketManagerException, ApisResourceAccessException {
 
         InfoDto dto = new InfoDto(id, src, process, false);
 
-        ResponseWrapper<List> resp =
-                post(ApiName.PACKETMANAGER_SEARCH_AUDITS, req(dto), List.class);
+        List<FieldResponseDto> list = call(
+                ApiName.PACKETMANAGER_SEARCH_AUDITS,
+                wrapRequest(dto),
+                new ParameterizedTypeReference<ResponseWrapper<List<FieldResponseDto>>>() {},
+                "getAudits", id
+        );
 
-        checkErrors("getAudits", id, resp.getErrors());
-
-        List raw = resp.getResponse();
-        if (raw == null) return new ArrayList<>();
-
-        List<FieldResponseDto> out = new ArrayList<>();
-        raw.forEach(o -> out.add(convert(o, FieldResponseDto.class)));
-
-        return out;
+        return (list == null) ? Collections.emptyList() : list;
     }
 
     /* ============================================================
@@ -246,99 +233,97 @@ public class PacketManagerService {
        ============================================================ */
 
     public BiometricRecord getBiometrics(String id, String person, List<String> mods,
-                                         String source, String process)
-             {
+                                         String src, String process) throws PacketManagerException, ApisResourceAccessException {
 
-        BiometricRequestDto dto = new BiometricRequestDto(id, person, mods, source, process, false);
+        BiometricRequestDto dto = new BiometricRequestDto(id, person, mods, src, process, false);
 
-        ResponseWrapper<BiometricRecord> resp =
-                post(ApiName.PACKETMANAGER_SEARCH_BIOMETRICS, req(dto), BiometricRecord.class);
-
-        checkErrors("getBiometrics", id, resp.getErrors());
-
-        return resp.getResponse();
+        return call(
+                ApiName.PACKETMANAGER_SEARCH_BIOMETRICS,
+                wrapRequest(dto),
+                new ParameterizedTypeReference<ResponseWrapper<BiometricRecord>>() {},
+                "getBiometrics", id
+        );
     }
 
     /* ============================================================
        META INFO
        ============================================================ */
 
-    public Map<String, String> getMetaInfo(String id, String source, String process)
-             {
+    public Map<String, String> getMetaInfo(String id, String src, String process) throws PacketManagerException, ApisResourceAccessException {
 
-        InfoDto dto = new InfoDto(id, source, process, false);
+        InfoDto dto = new InfoDto(id, src, process, false);
 
-        ResponseWrapper<FieldResponseDto> resp =
-                post(ApiName.PACKETMANAGER_SEARCH_METAINFO, req(dto), FieldResponseDto.class);
+        FieldResponseDto map = call(
+                ApiName.PACKETMANAGER_SEARCH_METAINFO,
+                wrapRequest(dto),
+                new ParameterizedTypeReference<ResponseWrapper<FieldResponseDto>>() {},
+                "getMetaInfo", id
+        );
 
-        checkErrors("getMetaInfo", id, resp.getErrors());
-
-        return resp.getResponse().getFields();
+        return (map == null || map.getFields() == null)
+                ? Collections.emptyMap()
+                : map.getFields();
     }
 
     /* ============================================================
        INFO
        ============================================================ */
 
-    public InfoResponseDto info(String id) {
+    public InfoResponseDto info(String id) throws PacketManagerException, ApisResourceAccessException {
 
         InfoRequestDto dto = new InfoRequestDto(id);
 
-        ResponseWrapper<InfoResponseDto> resp =
-                post(ApiName.PACKETMANAGER_INFO, req(dto), InfoResponseDto.class);
-
-        checkErrors("info", id, resp.getErrors());
-
-        return resp.getResponse();
+        return call(
+                ApiName.PACKETMANAGER_INFO,
+                wrapRequest(dto),
+                new ParameterizedTypeReference<ResponseWrapper<InfoResponseDto>>() {},
+                "info", id
+        );
     }
 
     /* ============================================================
        TAGS
        ============================================================ */
 
-    public void addOrUpdateTags(String id, Map<String, String> tags)
-             {
+    public void addOrUpdateTags(String id, Map<String, String> tags) throws PacketManagerException, ApisResourceAccessException {
 
         UpdateTagRequestDto dto = new UpdateTagRequestDto(id, tags);
 
-        ResponseWrapper<Void> resp =
-                post(ApiName.PACKETMANAGER_UPDATE_TAGS, req(dto), Void.class);
-
-        checkErrors("addOrUpdateTags", id, resp.getErrors());
+        call(
+                ApiName.PACKETMANAGER_UPDATE_TAGS,
+                wrapRequest(dto),
+                new ParameterizedTypeReference<ResponseWrapper<Void>>() {},
+                "addOrUpdateTags", id
+        );
     }
 
-
-    public void deleteTags(String id, List<String> tags)
-            throws Exception {
+    public void deleteTags(String id, List<String> tags) throws PacketManagerException, ApisResourceAccessException {
 
         DeleteTagRequestDTO dto = new DeleteTagRequestDTO(id, tags);
 
-        ResponseWrapper<DeleteTagResponseDTO> resp =
-                post(ApiName.PACKETMANAGER_DELETE_TAGS, req(dto), DeleteTagResponseDTO.class);
-
-        checkErrors("deleteTags", id, resp.getErrors());
+        call(
+                ApiName.PACKETMANAGER_DELETE_TAGS,
+                wrapRequest(dto),
+                new ParameterizedTypeReference<ResponseWrapper<DeleteTagResponseDTO>>() {},
+                "deleteTags", id
+        );
     }
 
-
-    public Map<String, String> getTags(String id, List<String> tagNames) throws PacketManagerException {
+    public Map<String, String> getTags(String id, List<String> tagNames) throws PacketManagerException, ApisResourceAccessException {
 
         TagRequestDto dto = new TagRequestDto(id, tagNames);
 
-        ResponseWrapper<TagResponseDto> resp =
-                post(ApiName.PACKETMANAGER_GET_TAGS, req(dto), TagResponseDto.class);
+        TagResponseDto resp = call(
+                ApiName.PACKETMANAGER_GET_TAGS,
+                wrapRequest(dto),
+                new ParameterizedTypeReference<ResponseWrapper<TagResponseDto>>() {},
+                "getTags", id
+        );
 
-        List<ErrorDTO> errors = resp.getErrors();
-        if (errors != null && !errors.isEmpty()) {
-            ErrorDTO e = errors.get(0);
-            if ("KER-PUT-024".equalsIgnoreCase(e.getErrorCode())) return null;
-            failFast("getTags", id, e);
-        }
-
-        TagResponseDto r = resp.getResponse();
-        return (r != null) ? r.getTags() : null;
+        return (resp != null) ? resp.getTags() : null;
     }
 
-    public Map<String, String> getAllTags(String id) throws PacketManagerException {
+    public Map<String, String> getAllTags(String id) throws PacketManagerException, ApisResourceAccessException {
         return getTags(id, null);
     }
 }
